cambio en el logo

--- a/ilab/src/main/webapp/resources/scaffold/TemplateBlanco.xhtml
+++ b/ilab/src/main/webapp/resources/scaffold/TemplateBlanco.xhtml
@@ -19,7 +19,7 @@
 	<div class="container forgecontainer">
 		<div id="navigation">
 			<h:link id="homeLink" outcome="/faces/index.xhtml">
-				<img src='#{resource["taxi.png"]}' alt="Forge... get hammered" border="0" style="height : 193px; width : 204px;"/>
+				<img src='#{resource["iclinicaa.png"]}' alt="Forge... get hammered" border="0" style="height : 200px; width : 202px;"/>
 			</h:link>
 		</div>
 
