--- a/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -162,10 +162,19 @@
 
 		<div id="content">
 			<h1>
-				<ui:insert name="header" />
-						<h:outputLink rendered="#{request.getUserPrincipal() != null}" value="#{request.contextPath}/logoutServlet" >
+			<table style="width:100%">
+  <tr>
+    <td>
+    <ui:insert name="header" />
+    </td>
+    <td align="right">
+    <h:outputLink rendered="#{request.getUserPrincipal() != null}" value="#{request.contextPath}/logoutServlet" >
                             <h:graphicImage  value="/resources/logout.png" width="80" height="80" />
                         </h:outputLink>
+    </td> 
+  </tr>
+</table>
+				
 			</h1>
 			<h2>
 				<ui:insert name="subheader" />
