--- a/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -25,7 +25,7 @@
 			<p:panelMenu style="width:300px">
 
 		<p:submenu label="Administracion" rendered="#{request.isUserInRole('SUPER')}">
-        	<p:menuitem value="Usuarios" outcome="/generados/usuario/search"/>
+        	<p:menuitem value="Usuarios" outcome="/admin/usuario/search"/>
         <p:separator />	
         </p:submenu>
         <p:submenu label="Parametros" rendered="#{request.isUserInRole('SUPER') or request.isUserInRole('ADMIN')}">
