--- a/ilab/src/main/webapp/admin/usuario/search.xhtml
+++ b/ilab/src/main/webapp/admin/usuario/search.xhtml
@@ -95,11 +95,11 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value="Usuario Password"/>
+						<h:outputText value="Opciones"/>
 					</f:facet>
-					<h:link outcome="/admin/usuario/view">
+					<h:link outcome="/admin/usuario/usuarioRol" styleClass="btn btn-primary">
 						<f:param name="id" value="#{_item.idUsuario}"/>
-						<h:outputText id="itemUsuarioPassword" value="#{_item.usuarioPassword}"/>
+						<h:outputText id="itemUsuarioPassword" value="Asignar Rol"/>
 					</h:link>
 				</h:column>
 			</h:dataTable>
