--- a/ilab/src/main/webapp/login.xhtml
+++ b/ilab/src/main/webapp/login.xhtml
@@ -36,7 +36,7 @@
    <h:panelGrid columns='1'>
 
     <input type='submit' name='submit' value='Aceptar' />
-
+	<input type="button" value="Salir" onclick="window.location.href='/ilab/index.html'"/>
    </h:panelGrid>
 
   </h:panelGrid>
