--- a/ilab/src/main/webapp/parametros/especialidad/view.xhtml
+++ b/ilab/src/main/webapp/parametros/especialidad/view.xhtml
@@ -56,7 +56,7 @@
 			<h:outputLabel for="especialidadBeanEspecialidadUsuarioBorrado" value="Usuario Borrado:"/>
 			<h:outputText id="especialidadBeanEspecialidadUsuarioBorrado" value="#{especialidadBean.especialidad.usuarioBorrado}"/>
 			<h:outputText/>
-			<h:outputLabel for="especialidadBeanEspecialidadTrabajadors" value="Trabajadors:"/>
+			<h:outputLabel for="especialidadBeanEspecialidadTrabajadors" value="Trabajadores:"/>
 			<h:dataTable id="especialidadBeanEspecialidadTrabajadors" styleClass="data-table" value="#{forgeview:asList(especialidadBean.especialidad.trabajadors)}" var="_item">
 				<h:column>
 					<f:facet name="header">
