--- a/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
+++ b/ilab/src/main/webapp/resources/scaffold/pageTemplate.xhtml
@@ -26,6 +26,7 @@
 
 		<p:submenu label="Administracion" rendered="#{request.isUserInRole('SUPER')}">
         	<p:menuitem value="Usuarios" outcome="/admin/usuario/search"/>
+        	<p:menuitem value="Compania" outcome="/admin/compania/search"/>
         <p:separator />	
         </p:submenu>
         <p:submenu label="Parametros" rendered="#{request.isUserInRole('SUPER') or request.isUserInRole('ADMIN')}">
