arreglo toma de muestra

--- a/ilab/src/main/webapp/procesos/tomaMuestra/view.xhtml
+++ b/ilab/src/main/webapp/procesos/tomaMuestra/view.xhtml
@@ -29,12 +29,12 @@
 			<h:outputText id="tomaMuestraBeanTomaMuestraIdTomaMuestra" value="#{tomaMuestraBean.tomaMuestra.idTomaMuestra}"/>
 			<h:outputText/>
 			<h:outputLabel for="tomaMuestraBeanTomaMuestraSolicitudDetalle" value="Solicitud Detalle:"/>
-			<h:link id="tomaMuestraBeanTomaMuestraSolicitudDetalle" outcome="/solicitudDetalle/view" rendered="#{!empty tomaMuestraBean.tomaMuestra.solicitudDetalle}" value="#{tomaMuestraBean.tomaMuestra.solicitudDetalle}">
+			<h:link id="tomaMuestraBeanTomaMuestraSolicitudDetalle" outcome="/procesos/solicitudDetalle/view" rendered="#{!empty tomaMuestraBean.tomaMuestra.solicitudDetalle}" value="#{tomaMuestraBean.tomaMuestra.solicitudDetalle}">
 				<f:param name="id" value="#{tomaMuestraBean.tomaMuestra.solicitudDetalle.idSolicitudDetalle}"/>
 			</h:link>
 			<h:outputText/>
 			<h:outputLabel for="tomaMuestraBeanTomaMuestraTrabajador" value="Trabajador:"/>
-			<h:link id="tomaMuestraBeanTomaMuestraTrabajador" outcome="/trabajador/view" rendered="#{!empty tomaMuestraBean.tomaMuestra.trabajador}" value="#{tomaMuestraBean.tomaMuestra.trabajador}">
+			<h:link id="tomaMuestraBeanTomaMuestraTrabajador" outcome="/procesos/trabajador/view" rendered="#{!empty tomaMuestraBean.tomaMuestra.trabajador}" value="#{tomaMuestraBean.tomaMuestra.trabajador}">
 				<f:param name="id" value="#{tomaMuestraBean.tomaMuestra.trabajador.idTrabajador}"/>
 			</h:link>
 			<h:outputText/>
