--- a/ilab/src/main/webapp/procesos/tomaMuestra/view.xhtml
+++ b/ilab/src/main/webapp/procesos/tomaMuestra/view.xhtml
@@ -4,6 +4,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
 	template="/resources/scaffold/pageTemplate.xhtml">
 
 	<f:metadata>
@@ -74,7 +75,53 @@
 			<h:outputText id="tomaMuestraBeanTomaMuestraUsuarioBorrado" value="#{tomaMuestraBean.tomaMuestra.usuarioBorrado}"/>
 			<h:outputText/>
 		</h:panelGrid>
-
+		<h:panelGrid>
+		    <h:outputText value="Interleaved 2 of 5" />
+		    <p:barcode value="0123456789" type="int2of5" />
+		 
+		    <h:outputText value="Codabar" />
+		    <p:barcode value="0123456789" type="codabar"/>
+		 
+		    <h:outputText value="Code39" />
+		    <p:barcode value="0123456789" type="code39" />
+		 
+		    <h:outputText value="Code128" />
+		    <p:barcode value="0123456789" type="code128"/>
+		 
+		    <h:outputText value="EAN-8" />
+		    <p:barcode value="20123451" type="ean8"/>
+		 
+		    <h:outputText value="EAN-13" />
+		    <p:barcode value="0123456789012" type="ean13"/>
+		 
+		    <h:outputText value="UPC-A (PNG)" />
+		    <p:barcode value="01234567895" type="upca" format="png"/>
+		 
+		    <h:outputText value="UPC-E (Vertical)" />
+		    <p:barcode value="01234133" type="upce" orientation="90"/>
+		 
+		    <h:outputText value="PDF417" />
+		    <p:barcode value="0123456789" type="pdf417"/>
+		 
+		    <h:outputText value="DataMatrix" />
+		    <p:barcode value="0123456789" type="datamatrix"/>
+		 
+		    <h:outputText value="Postnet" />
+		    <p:barcode value="0123456789" type="postnet"/>
+		 
+		    <h:outputText value="QR" />
+		    <p:barcode value="0123456789" type="qr"/>
+		        	
+		</h:panelGrid>
+		
+		<p:panelGrid columns="2">
+  <p:barcode value="5675354567230" type="ean13" />
+  <h:outputText value="5675354567230" />
+  <p:barcode value="5675354567230" type="postnet" />
+  <h:outputText value="5675354567230" />
+  <p:barcode value="http://www.angularfaces.com" type="qr" />
+  <h:outputText value="http://www.angularfaces.com" />
+</p:panelGrid>
 		<div class="buttons">
 			<h:link value="Volver" outcome="search" styleClass="btn btn-primary"/> 
 			<h:link value="Editar" outcome="create" includeViewParams="true" styleClass="btn btn-primary"/>
