--- a/ilab/src/main/webapp/procesos/persona/view.xhtml
+++ b/ilab/src/main/webapp/procesos/persona/view.xhtml
@@ -164,7 +164,7 @@
 				</h:column>
 				<h:column>
 					<f:facet name="header">
-						<h:outputText value=""/>
+						<h:outputText value="Fecha solicitud"/>
 					</f:facet>
 					<h:link outcome="/procesos/solicitud/view">
 						<f:param name="id" value="#{_item.idSolicitud}"/>
