--- a/ilab/src/main/webapp/procesos/tomaMuestra/create.xhtml
+++ b/ilab/src/main/webapp/procesos/tomaMuestra/create.xhtml
@@ -4,6 +4,7 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:forgeview="http://jboss.org/forge/view"
 	template="/resources/scaffold/pageTemplate.xhtml">
@@ -69,9 +70,8 @@
 				<h:outputText/>
 				<h:outputLabel for="tomaMuestraBeanTomaMuestraFechaTomaMuestra" value="Fecha Toma Muestra:"/>
 				<h:panelGroup>
-					<h:inputText id="tomaMuestraBeanTomaMuestraFechaTomaMuestra" maxLength="29" value="#{tomaMuestraBean.tomaMuestra.fechaTomaMuestra}">
-						<f:convertDateTime pattern="MMM d, yyyy hh:mm:ss a" type="both"/>
-					</h:inputText>
+
+					<p:calendar id="tomaMuestraBeanTomaMuestraFechaTomaMuestra" value="#{tomaMuestraBean.tomaMuestra.fechaTomaMuestra}" showOn="button" pattern="dd-MM-yyyy" mask="true" />
 					<h:message for="tomaMuestraBeanTomaMuestraFechaTomaMuestra" styleClass="error"/>
 				</h:panelGroup>
 				<h:outputText/>				
